<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.sample.app.login.signup.SignUpViewModel" />

        <variable
            name="fragment"
            type="com.example.sample.app.login.signup.SignUpFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameTil"
                style="@style/EditTextOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/inputFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@null"
                    android:hint="@string/prompt_full_name"
                    android:inputType="textCapWords"
                    android:onTextChanged="@{(text, start, before, count) -> fragment.onTextChanged(text.toString(), viewModel.userName, viewModel.password)}"
                    android:text="@={viewModel.fullName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameTil"
                style="@style/EditTextOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullNameTil">

                <EditText
                    android:id="@+id/inputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@null"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{(text, start, before, count) -> fragment.onTextChanged(viewModel.fullName, text.toString(), viewModel.password)}"
                    android:text="@={viewModel.userName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                style="@style/EditTextOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameTil">

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@null"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:onTextChanged="@{(text, start, before, count) -> fragment.onTextChanged(viewModel.fullName, viewModel.userName, text.toString())}"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.mobile.design.lib.CustomizableGenericButton
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:layout_marginBottom="@dimen/dimen_40dp"
                android:onClick="@{() -> fragment.registerUser()}"
                app:buttonState="disabled"
                app:buttonTitleText="@string/sigup"
                app:buttonTitleTextColor="@color/white"
                app:icon="@drawable/ic_user"
                app:iconVisible="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTil" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>