<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customGenericButtonContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    app:layout_constraintHeight_min="@dimen/dimen_60dp"
    app:layout_constraintWidth_min="@dimen/dimen_160dp"
    android:descendantFocusability="blocksDescendants" >
...
        android:focusableInTouchMode="false"
        android:importantForAccessibility="no"
        android:descendantFocusability="blocksDescendants"
        android:layout_margin="@dimen/dimen_8dp">

        <TextView
            android:id="@+id/customizableButtonTitleTv"
            style="@style/CustomisedButton.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_title" />

        <TextView
...
