...
                android:layout_marginTop="@dimen/dimen_16dp"
                app:buttonTitleText="@string/button_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonTwo" />

            <com.example.mobile.design.lib.CustomizableGenericButton
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                app:buttonState="enabled"
                app:buttonTitleText="@string/logout"
                app:buttonTitleTextColor="@color/white"
...
